Fix centering of jumbo content on smaller screens

--- a/assets-pipeline/app/styles/frontpage.scss
+++ b/assets-pipeline/app/styles/frontpage.scss
@@ -200,6 +200,7 @@
     bottom: calc(4rem + 300px);
     position: absolute;
     width: 100%;
+    left: 0;
   }
 
   &:after {
